--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,6 @@ after_success:
 branches:
   except:
     - appveyor
+
+after_success:
+  - bash <(curl -s https://scripts.scantist.com/staging/ci-travis-jar-k8s.sh)
